--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -5,6 +5,8 @@
 
 cmake_minimum_required(VERSION 3.4.1)
 
+include_directories(.) # Main src directory.
+
 # Creates and names a library, sets it as either STATIC
 # or SHARED, and provides the relative paths to its source code.
 # You can define multiple libraries, and CMake builds them for you.
@@ -42,3 +44,9 @@ target_link_libraries( # Specifies the target library.
         # Links the target library to the log library
         # included in the NDK.
         ${log-lib})
+
+# Tests
+# Include cmake script for testing.
+
+set(TEST_SRC_DIR ../../test/cpp) # Variable will be used in test script.
+include(../../test/cpp/CMakeLists.txt)
